create body index on small corpus

--- a/inverted_index.ipynb
+++ b/inverted_index.ipynb
@@ -6,7 +6,6 @@
       "name": "inverted_index.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwK4AuCV1CJKOdkSQV+0+b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
         "id": "WimsAJ5y1CQt",
         "cellView": "form"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +95,7 @@
         "id": "a0trKqje7Tov",
         "outputId": "1dd80b8d-294e-4cd5-8cdc-bb86dbb45610"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +152,7 @@
         "outputId": "65386907-c499-4450-9c29-467cfc6e6bc8",
         "collapsed": true
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +231,7 @@
       "metadata": {
         "id": "3IMNAsqpuMWg"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +263,7 @@
         "outputId": "80f00e46-a181-458c-9056-44ad2d2f48a7",
         "collapsed": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +305,7 @@
         "id": "hOLv2FxdupvH",
         "collapsed": true
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +328,7 @@
       "metadata": {
         "id": "dRybod2rup2n"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,93 +343,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Document **body** inverted index"
+        "function for all of the 3 indeces:"
       ],
       "metadata": {
-        "id": "xOvp0sXotIH9"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#TODO - delete this section before submission\n",
-        "\n",
-        "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
-        "general_1000_docs = parquetFile.limit(1000).select(\"text\",\"id\").rdd #todo - comment\n",
-        "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
-        "\n",
-        "#general_1000_docs.take(20)"
-      ],
-      "metadata": {
-        "id": "_4zLZ4ClxLNV"
-      },
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#TODO - delete this section before submission\n",
-        "\n",
-        "#add another RDD with the files of our train data set of queries (30), to make sure that we have those files in our small corpus\n",
-        "#docsID\n",
-        "df = parquetFile[parquetFile[\"id\"].isin(docsID)]\n",
-        "\n",
-        "in_train_test_docs = df.select(\"text\",\"id\").rdd #todo - comment\n",
-        "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
-        "#in_train_test_docs.take(20)"
-      ],
-      "metadata": {
-        "id": "mdeU5L_Ex0N1"
-      },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#RDD of our temporary corpus\n",
-        "\n",
-        "\n",
-        "#united_body_corpus = in_train_test_docs.union(general_1000_docs).distinct()\n",
-        "#todo naama\n",
-        "united_body_corpus = general_1000_docs\n",
-        "\n",
-        "\n",
-        "#united.take(20)\n",
-        "#united.count()"
-      ],
-      "metadata": {
-        "id": "ABIQYtt-DBZy"
-      },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Processing wikipedia corpus"
-      ],
-      "metadata": {
-        "id": "gCUyfzTFsH1i"
+        "id": "6hFT9iVeFsuG"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Word counts"
+        "**word_count**: Count the frequency of each word in the given text (tf),\n",
+        "  and choose if you want to remove stopword by using removeStopword boolean argument.\n",
+        "  "
       ],
       "metadata": {
-        "id": "0RjSIs9dsSIH"
+        "id": "dzZYSFp1GOOg"
       }
     },
     {
       "cell_type": "code",
       "source": [
         "def word_count(text, id, removeStopword):\n",
-        "  ''' Count the frequency of each word in the given text (tf),\n",
-        "  and choose if you want to remove stopword by using removeStopword boolean argument.\n",
-        "  Parameters:\n",
+        "  '''Parameters:\n",
         "  -----------\n",
         "    text: str\n",
         "      Text/title/anchor text of one document\n",
@@ -455,28 +389,7 @@
       "metadata": {
         "id": "MYQNEkcYuhMh"
       },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Calculate **tf** of the docs in **'united_body_corpus'** RDD (docs body text)"
-      ],
-      "metadata": {
-        "id": "4mtUXFjFvfjn"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "word_counts_body = united_body_corpus.flatMap(lambda x: word_count(x[0], x[1],True))\n",
-        "#word_counts_body.take(10)"
-      ],
-      "metadata": {
-        "id": "7vLBHV-qvUFI"
-      },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,44 +415,12 @@
         "    list of tuples\n",
         "      A sorted posting list.\n",
         "  '''\n",
-        "  return sorted(unsorted_pl,key=lambda x: x[0])\n",
-        "\n",
-        "postings = word_counts_body.groupByKey().mapValues(reduce_word_counts)"
+        "  return sorted(unsorted_pl,key=lambda x: x[0])"
       ],
       "metadata": {
         "id": "5SH_BYSGw8gP"
       },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Document frequency and filteration"
-      ],
-      "metadata": {
-        "id": "tEYFAkhmx04U"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Filter out rare words (appear in 10 or fewer documents) "
-      ],
-      "metadata": {
-        "id": "9OZkbwmqx_4s"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#TODO - (when working on the entire corpus, we will increase this threshold to a minimum of 50 documents).\n",
-        "postings_filtered_body = postings.filter(lambda x: len(x[1])>10)"
-      ],
-      "metadata": {
-        "id": "EC1758M7x8yS"
-      },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,20 +453,7 @@
       "metadata": {
         "id": "vwCYx0kdyWYJ"
       },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#RDD of (token, df) pair\n",
-        "w2df_body = calculate_df(postings_filtered_body).collectAsMap()\n",
-        "#w2df_body.take(10)"
-      ],
-      "metadata": {
-        "id": "n9JVuoctysij"
-      },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -631,52 +499,7 @@
       "metadata": {
         "id": "0tpVrp-T83qj"
       },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# todo delete this cell\n",
-        "posting_locs_list = partition_postings_and_write(postings_filtered_body).collect()"
-      ],
-      "metadata": {
-        "id": "sR1QLMH2_N4I"
-      },
-      "execution_count": 29,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# merge the posting locations into a single dict and run more tests (5 points) - todo delete this cell\n",
-        "super_posting_locs = defaultdict(list)\n",
-        "for posting_loc in posting_locs_list:\n",
-        "  for k, v in posting_loc.items():\n",
-        "    super_posting_locs[k].extend(v)"
-      ],
-      "metadata": {
-        "id": "LcKfsQj8AQvU"
-      },
-      "execution_count": 30,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Create inverted index instance\n",
-        "inverted = InvertedIndex()\n",
-        "# Adding the posting locations dictionary to the inverted index\n",
-        "inverted.posting_locs = super_posting_locs\n",
-        "# Add the token - df dictionary to the inverted index\n",
-        "inverted.df = w2df_body\n",
-        "# write the global stats out\n",
-        "inverted.write_index('.', 'index')"
-      ],
-      "metadata": {
-        "id": "LcvE_Tft-PNG"
-      },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +523,146 @@
       "metadata": {
         "id": "mzKcbhS9B4S-"
       },
-      "execution_count": 32,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Document body inverted index**"
+      ],
+      "metadata": {
+        "id": "xOvp0sXotIH9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "create small corpus of documents text"
+      ],
+      "metadata": {
+        "id": "EOmtnK0vF_Rb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TODO - delete this section before submission\n",
+        "\n",
+        "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
+        "general_1000_docs = parquetFile.limit(1000).select(\"text\",\"id\").rdd #todo - comment\n",
+        "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
+        "\n",
+        "#general_1000_docs.take(20)"
+      ],
+      "metadata": {
+        "id": "_4zLZ4ClxLNV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TODO - delete this section before submission\n",
+        "\n",
+        "#add another RDD with the files of our train data set of queries (30), to make sure that we have those files in our small corpus\n",
+        "#docsID\n",
+        "df = parquetFile[parquetFile[\"id\"].isin(docsID)]\n",
+        "\n",
+        "in_train_test_docs = df.select(\"text\",\"id\").rdd #todo - comment\n",
+        "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
+        "#in_train_test_docs.take(20)"
+      ],
+      "metadata": {
+        "id": "mdeU5L_Ex0N1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#RDD of our temporary corpus\n",
+        "\n",
+        "\n",
+        "#united_body_corpus = in_train_test_docs.union(general_1000_docs).distinct()\n",
+        "#todo naama\n",
+        "united_body_corpus = general_1000_docs\n",
+        "\n",
+        "\n",
+        "#united.take(20)\n",
+        "#united.count()"
+      ],
+      "metadata": {
+        "id": "ABIQYtt-DBZy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculate **tf** of the docs in **'united_body_corpus'** RDD (docs body text)"
+      ],
+      "metadata": {
+        "id": "4mtUXFjFvfjn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_counts_body = united_body_corpus.flatMap(lambda x: word_count(x[0], x[1],True))\n",
+        "#word_counts_body.take(10)"
+      ],
+      "metadata": {
+        "id": "7vLBHV-qvUFI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filter out rare words"
+      ],
+      "metadata": {
+        "id": "9OZkbwmqx_4s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TODO - (when working on the entire corpus, we will increase this threshold to a minimum of 50 documents).\n",
+        "postings = word_counts_body.groupByKey().mapValues(reduce_word_counts)\n",
+        "postings_filtered_body = postings.filter(lambda x: len(x[1])>10)\n",
+        "\n",
+        "#RDD of (token, df) pair\n",
+        "w2df_body = calculate_df(postings_filtered_body).collectAsMap()\n",
+        "#w2df_body.take(10)\n",
+        "\n",
+        "# todo delete this cell\n",
+        "posting_locs_list = partition_postings_and_write(postings_filtered_body).collect()\n",
+        "\n",
+        "# merge the posting locations into a single dict and run more tests (5 points) - todo delete this cell\n",
+        "super_posting_locs = defaultdict(list)\n",
+        "for posting_loc in posting_locs_list:\n",
+        "  for k, v in posting_loc.items():\n",
+        "    super_posting_locs[k].extend(v)\n",
+        "\n",
+        "# Create inverted index instance\n",
+        "inverted = InvertedIndex()\n",
+        "# Adding the posting locations dictionary to the inverted index\n",
+        "inverted.posting_locs = super_posting_locs\n",
+        "# Add the token - df dictionary to the inverted index\n",
+        "inverted.df = w2df_body\n",
+        "# write the global stats out\n",
+        "inverted.write_index('.', 'index')"
+      ],
+      "metadata": {
+        "id": "EC1758M7x8yS"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
