created title inverted index

--- a/inverted_index.ipynb
+++ b/inverted_index.ipynb
@@ -39,7 +39,7 @@
         "id": "WimsAJ5y1CQt",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -93,9 +93,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a0trKqje7Tov",
-        "outputId": "1dd80b8d-294e-4cd5-8cdc-bb86dbb45610"
+        "outputId": "6cb08486-1c60-4dbf-f80b-22e41ce88f16",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,17 +150,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GkCtB_hcscgs",
-        "outputId": "65386907-c499-4450-9c29-467cfc6e6bc8",
+        "outputId": "867d9585-b60e-46e0-a38e-3fe22d5c99b8",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 281.3 MB 33 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 198 kB 50.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 281.3 MB 34 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 198 kB 51.3 MB/s \n",
             "\u001b[?25h  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "The following additional packages will be installed:\n",
             "  openjdk-8-jre-headless\n",
@@ -196,17 +197,17 @@
             "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/extcheck to provide /usr/bin/extcheck (extcheck) in auto mode\n",
             "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/jhat to provide /usr/bin/jhat (jhat) in auto mode\n",
             "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/wsgen to provide /usr/bin/wsgen (wsgen) in auto mode\n",
-            "\u001b[K     |████████████████████████████████| 154 kB 34.2 MB/s \n",
-            "\u001b[?25h--2022-01-01 09:36:12--  https://repos.spark-packages.org/graphframes/graphframes/0.8.2-spark3.2-s_2.12/graphframes-0.8.2-spark3.2-s_2.12.jar\n",
-            "Resolving repos.spark-packages.org (repos.spark-packages.org)... 52.85.146.93, 52.85.146.3, 52.85.146.59, ...\n",
-            "Connecting to repos.spark-packages.org (repos.spark-packages.org)|52.85.146.93|:443... connected.\n",
+            "\u001b[K     |████████████████████████████████| 154 kB 5.2 MB/s \n",
+            "\u001b[?25h--2022-01-01 10:38:38--  https://repos.spark-packages.org/graphframes/graphframes/0.8.2-spark3.2-s_2.12/graphframes-0.8.2-spark3.2-s_2.12.jar\n",
+            "Resolving repos.spark-packages.org (repos.spark-packages.org)... 13.32.87.119, 13.32.87.63, 13.32.87.12, ...\n",
+            "Connecting to repos.spark-packages.org (repos.spark-packages.org)|13.32.87.119|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 247880 (242K) [binary/octet-stream]\n",
             "Saving to: ‘/usr/local/lib/python3.7/dist-packages/pyspark/jars/graphframes-0.8.2-spark3.2-s_2.12.jar’\n",
             "\n",
-            "graphframes-0.8.2-s 100%[===================>] 242.07K  --.-KB/s    in 0.005s  \n",
+            "graphframes-0.8.2-s 100%[===================>] 242.07K  --.-KB/s    in 0.06s   \n",
             "\n",
-            "2022-01-01 09:36:12 (51.6 MB/s) - ‘/usr/local/lib/python3.7/dist-packages/pyspark/jars/graphframes-0.8.2-spark3.2-s_2.12.jar’ saved [247880/247880]\n",
+            "2022-01-01 10:38:38 (4.15 MB/s) - ‘/usr/local/lib/python3.7/dist-packages/pyspark/jars/graphframes-0.8.2-spark3.2-s_2.12.jar’ saved [247880/247880]\n",
             "\n"
           ]
         }
@@ -231,7 +232,7 @@
       "metadata": {
         "id": "3IMNAsqpuMWg"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -260,10 +261,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UNxteVcxuY3G",
-        "outputId": "80f00e46-a181-458c-9056-44ad2d2f48a7",
+        "outputId": "8c736a82-89fd-4ab9-d1f3-91e94ac64091",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +278,7 @@
             "  $ gcloud survey\n",
             "\n",
             "Copying gs://wikidata_preprocessed/multistream1_preprocessed.parquet...\n",
-            "- [1 files][316.7 MiB/316.7 MiB]                                                \n",
+            "\\ [1 files][316.7 MiB/316.7 MiB]                                                \n",
             "Operation completed over 1 objects/316.7 MiB.                                    \n"
           ]
         }
@@ -305,7 +306,7 @@
         "id": "hOLv2FxdupvH",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -328,7 +329,7 @@
       "metadata": {
         "id": "dRybod2rup2n"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -343,7 +344,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "function for all of the 3 indeces:"
+        "### **function for all of the 3 indeces:**"
       ],
       "metadata": {
         "id": "6hFT9iVeFsuG"
@@ -389,7 +390,7 @@
       "metadata": {
         "id": "MYQNEkcYuhMh"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -420,7 +421,7 @@
       "metadata": {
         "id": "5SH_BYSGw8gP"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -453,7 +454,7 @@
       "metadata": {
         "id": "vwCYx0kdyWYJ"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -499,7 +500,7 @@
       "metadata": {
         "id": "0tpVrp-T83qj"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -523,7 +524,7 @@
       "metadata": {
         "id": "mzKcbhS9B4S-"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -550,15 +551,15 @@
         "#TODO - delete this section before submission\n",
         "\n",
         "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
-        "general_1000_docs = parquetFile.limit(1000).select(\"text\",\"id\").rdd #todo - comment\n",
+        "general_1000_docs_body = parquetFile.limit(1000).select(\"text\",\"id\").rdd #todo - comment\n",
         "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
         "\n",
-        "#general_1000_docs.take(20)"
+        "#general_1000_docs_body.take(20)"
       ],
       "metadata": {
         "id": "_4zLZ4ClxLNV"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -570,14 +571,14 @@
         "#docsID\n",
         "df = parquetFile[parquetFile[\"id\"].isin(docsID)]\n",
         "\n",
-        "in_train_test_docs = df.select(\"text\",\"id\").rdd #todo - comment\n",
+        "in_train_test_docs_body = df.select(\"text\",\"id\").rdd #todo - comment\n",
         "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
         "#in_train_test_docs.take(20)"
       ],
       "metadata": {
         "id": "mdeU5L_Ex0N1"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -586,9 +587,9 @@
         "#RDD of our temporary corpus\n",
         "\n",
         "\n",
-        "#united_body_corpus = in_train_test_docs.union(general_1000_docs).distinct()\n",
+        "united_body_corpus = in_train_test_docs_body.union(general_1000_docs_body).distinct()\n",
         "#todo naama\n",
-        "united_body_corpus = general_1000_docs\n",
+        "#united_body_corpus = general_1000_docs_body\n",
         "\n",
         "\n",
         "#united.take(20)\n",
@@ -597,7 +598,7 @@
       "metadata": {
         "id": "ABIQYtt-DBZy"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -618,7 +619,7 @@
       "metadata": {
         "id": "7vLBHV-qvUFI"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -642,27 +643,135 @@
         "#w2df_body.take(10)\n",
         "\n",
         "# todo delete this cell\n",
-        "posting_locs_list = partition_postings_and_write(postings_filtered_body).collect()\n",
+        "posting_locs_list_body = partition_postings_and_write(postings_filtered_body).collect()\n",
         "\n",
         "# merge the posting locations into a single dict and run more tests (5 points) - todo delete this cell\n",
-        "super_posting_locs = defaultdict(list)\n",
-        "for posting_loc in posting_locs_list:\n",
+        "super_posting_locs_body = defaultdict(list)\n",
+        "for posting_loc in posting_locs_list_body:\n",
         "  for k, v in posting_loc.items():\n",
-        "    super_posting_locs[k].extend(v)\n",
+        "    super_posting_locs_body[k].extend(v)\n",
         "\n",
         "# Create inverted index instance\n",
-        "inverted = InvertedIndex()\n",
+        "bodyIndex = InvertedIndex()\n",
         "# Adding the posting locations dictionary to the inverted index\n",
-        "inverted.posting_locs = super_posting_locs\n",
+        "bodyIndex.posting_locs = super_posting_locs_body\n",
         "# Add the token - df dictionary to the inverted index\n",
-        "inverted.df = w2df_body\n",
+        "bodyIndex.df = w2df_body\n",
         "# write the global stats out\n",
-        "inverted.write_index('.', 'index')"
+        "bodyIndex.write_index('.', 'bodyIndex') #todo - change name to index_body"
       ],
       "metadata": {
         "id": "EC1758M7x8yS"
       },
-      "execution_count": null,
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Document title inverted index**"
+      ],
+      "metadata": {
+        "id": "vqlg_TQjJhdZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "create small corpus of documents title"
+      ],
+      "metadata": {
+        "id": "kBqr5XIGJ3ES"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TODO - delete this section before submission\n",
+        "\n",
+        "# take the selected parameters of the first 1,000 rows and create an RDD from it\n",
+        "general_1000_docs_title = parquetFile.limit(1000).select(\"title\",\"id\").rdd #todo - comment\n",
+        "#doc_text_pairs = parquetFile.limit(1000).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
+        "\n",
+        "#general_1000_docs_title.take(20)\n",
+        "#TODO - delete this section before submission\n",
+        "\n",
+        "in_train_test_docs_title = df.select(\"title\",\"id\").rdd #todo - comment\n",
+        "#doc_text_pairs = df.limit(2453).select(\"id\",\"title\",\"text\",\"anchor_text\").rdd #todo - uncomment\n",
+        "#in_train_test_docs.take(20)\n",
+        "\n",
+        "#RDD of our temporary corpus\n",
+        "\n",
+        "united_title_corpus = in_train_test_docs_title.union(general_1000_docs_title).distinct()\n",
+        "#united_title_corpus.take(20)\n",
+        "#united.count()"
+      ],
+      "metadata": {
+        "id": "5lQZRjwTJu0u"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculate **tf** of the docs in **'united_title_corpus'** RDD (docs title text)"
+      ],
+      "metadata": {
+        "id": "LzXc0tOXK_JY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_counts_title = united_title_corpus.flatMap(lambda x: word_count(x[0], x[1],False))\n",
+        "#word_counts_body.take(10)"
+      ],
+      "metadata": {
+        "id": "vFexvqu_K_Ju"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filter out rare words"
+      ],
+      "metadata": {
+        "id": "_cklqF4eK_Ju"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TODO - (when working on the entire corpus, we will increase this threshold to a minimum of 50 documents).\n",
+        "postings_title = word_counts_body.groupByKey().mapValues(reduce_word_counts)\n",
+        "#RDD of (token, df) pair\n",
+        "w2df_title = calculate_df(postings_title).collectAsMap()\n",
+        "\n",
+        "# todo delete this cell\n",
+        "posting_locs_list_title = partition_postings_and_write(postings_title).collect()\n",
+        "\n",
+        "# merge the posting locations into a single dict and run more tests (5 points) - todo delete this cell\n",
+        "super_posting_locs_title = defaultdict(list)\n",
+        "for posting_loc in posting_locs_list_title:\n",
+        "  for k, v in posting_loc.items():\n",
+        "    super_posting_locs_title[k].extend(v)\n",
+        "\n",
+        "# Create inverted index instance\n",
+        "titleIndex = InvertedIndex()\n",
+        "# Adding the posting locations dictionary to the inverted index\n",
+        "titleIndex.posting_locs = super_posting_locs_title\n",
+        "# Add the token - df dictionary to the inverted index\n",
+        "titleIndex.df = w2df_title\n",
+        "# write the global stats out\n",
+        "titleIndex.write_index('.', 'titleIndex') #todo - change name to index_body"
+      ],
+      "metadata": {
+        "id": "JVLaqQU-K_Jv"
+      },
+      "execution_count": 22,
       "outputs": []
     }
   ]
