run_frontend_in_colab  updates

--- a/run_frontend_in_colab.ipynb
+++ b/run_frontend_in_colab.ipynb
@@ -211,6 +211,49 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Authenticate your user with the email connected to your GCP account\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()"
+      ],
+      "metadata": {
+        "id": "vQqWSRo6Bo0-"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "project_id = 'core-period-321814'\n",
+        "!gcloud config set project {project_id}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xm8ofFKbBvM5",
+        "outputId": "40759a4b-d128-46d3-ac98-e02f5a7933da"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated property [core/project].\n",
+            "\u001b[1;33mWARNING:\u001b[0m You do not appear to have access to project [core-period-321814] or it does not exist.\n",
+            "\n",
+            "\n",
+            "To take a quick anonymous survey, run:\n",
+            "  $ gcloud survey\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Run the app"
@@ -228,7 +271,7 @@
       "metadata": {
         "id": "7opNkV6uRHIv"
       },
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -244,10 +287,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16fb2040-67a9-4c09-a344-9c9263b2f764"
+        "outputId": "ed99f49f-963e-4e2a-9c02-0ba493975258"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "index_gcp/bodyIndex.pkl\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -256,7 +306,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 22
         }
       ]
     },
