inverted_index - write index to GCP bucket

--- a/inverted_index.ipynb
+++ b/inverted_index.ipynb
@@ -712,6 +712,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#write index to bucket in GCP\n",
         "index_src = \"bodyIndex.pkl\"\n",
         "index_dst = f'gs://{bucket_name}/index_gcp/{index_src}'\n",
         "!gsutil cp $index_src $index_dst"
